[package]
name = "arbitrage_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2.0", features = ["legacy"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
dotenv = "0.15"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
rusqlite = { version = "0.29", features = ["bundled"] }